[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 115
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.pytest_cache
    | _build
    | build
    | conda
    | dist
    | docs
    | ideas
    | resources
  )/
  | _version.py
)
'''

[tool.isort]
profile = "black"
force_single_line  = "True"
multi_line_output = "NOQA"
src_paths = ["apstools"]

[tool.setuptools_scm]
write_to = "apstools/_version.py"
