[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools_scm[toml]>=8.0",
  "setuptools>=77",
]

[project]
name = "apstools"
dynamic = ["version"]
description = "Library of Python tools for use with the Bluesky Framework at the APS."
authors = [
  { name="BCDA" },
]
maintainers = [
  { name="Pete Jemian" },
  { name="Fanny Rodolakis" },
  { name="Max Wyman" },
  { name="Eric Codrea" },
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["EPICS", "data acquisition", "diffraction", "NeXus", "HDF5", "SPEC", "MatPlotLib"]
license = "LicenseRef-ANL-Open-Source-License"
license-files = ["LICENSE.txt"]
classifiers = [
  "Development Status :: 6 - Mature",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Software Development :: Embedded Systems",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Software Development",
  "Topic :: Utilities",
]
dependencies = [
  "area-detector-handlers",
  "bluesky-live",
  "bluesky>=1.6.2,!=1.11.0",
  "databroker<=1.999",
  "Deprecated",
  "entrypoints",
  "h5py",
  "intake<=1",
  "ipython",
  "matplotlib",
  "mongoquery>=1.3.6",
  "numpy>=2",
  "openpyxl",
  "ophyd>=1.6.1",
  "pandas",
  "pint",
  "psutil",
  "pyepics>=3.4.3",
  "pyRestTable>=2020.0.8",
  "pysumreg",  # deprecate, will remove in next major version bump
  "scipy",
  "spec2nexus>=2021.1.7",
  "toolz>=0.12.1",
  "xlrd",
]

[project.optional-dependencies]
dev = [
  "build",
  "coverage",
  "coveralls",
  "ipykernel",
  "mypy",
  "ophyd-registry",
  "pre-commit",
  "pytest",
  "ruff",
  # databroker 2.0.0b57 needs
  "doct",
  "humanize",
  "mongomock",
  "pymongo",
  # tiled 0.1.0b19 needs
  # "suitcase-mongo",
]
doc = [
  "ipython",
  "jinja2 >=3.0",
  "markupsafe ==2.0.1",
  "myst-nb",
  "myst-parser",
  "nbsphinx",
  "pydata-sphinx-theme",
  "pygments >=2.12",
  "pygments-ipython-console",
  "setuptools-scm",
  "sphinx",
  "sphinx-autoapi",
  "sphinx-design",
]
all = ["apstools[dev,doc]"]

[project.scripts]
spec2ophyd = "apstools.migration.spec2ophyd:main"

[project.urls]
"Homepage" = "https://bcda-aps.github.io/apstools/latest/"
"Bug Tracker" = "https://github.com/bcda-aps/apstools/issues"

[tool.copyright]
copyright = "2017-2025, UChicago Argonne, LLC"

[tool.coverage.run]
concurrency = [
    "thread",
    "multiprocessing"
]
omit = [
    # omit anything under the installed packages directory
    "*/site-packages/*",
    # omit these individual files
]
relative_files = true

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "ideas",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 115
indent-width = 4

# Keep in sync with requires-python above.
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = ["E402", "E741", "F401", "F403", "F405"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.setuptools]
py-modules = ["apstools"]

[tool.setuptools.packages.find]
include = ["apstools*"]  # package names should match these glob patterns (["*"] by default)

[tool.setuptools_scm]
write_to = "apstools/_version.py"
