[metadata]
description-file = README.md

[egg_info]
tag_build = 
tag_date = false

[aliases]
release = egg_info -RDb ''

[versioneer]
VCS = git
style = pep440
versionfile_source = apstools/_version.py
versionfile_build = apstools/_version.py
tag_prefix =
parentdir_prefix = apstools- 

[options.data_files]
apstools/beamtime = 
    apstools/beamtime/apsbss.adl
    apstools/beamtime/apsbss.db
    apstools/beamtime/apsbss.ui
