[coverage:run]
concurrency=
    thread
    multiprocessing
omit =
    # omit anything under the installed packages directory
    */site-packages/*
    # omit these individual files
relative_files = True

[flake8]
max-line-length = 115

    ; comments
    ; E203,  # See https://github.com/PyCQA/pycodestyle/issues/373
    ; F401,  # imported but unused
    ; E402,  # module level import not at top of file (for cansas.py)
    ; F722,  # allow Annotated[typ, some_func("some string")]
    ; F811,  # support typing.overload decorator

extend-ignore =
    E203, E226, F401, E402, E501, E741,
    F401, F403, F722, F811,
    W503, W504,
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs/source,
    ideas/,
    resources/debug_findpv.py

[isort]
profile=black

[metadata]
name = apstools
copyright = 2017-2023, UChicago Argonne, LLC
description = Various Python tools for use with the Bluesky Framework at the APS.
description_file = README.md
description_file_content_type = text/markdown
institution = Advanced Photon Source, Argonne National Laboratory
url = https://bcda-aps.github.io/apstools/latest/
license = Free To Use But Restricted (see LICENSE.txt file)
license_url = "https://github.com/BCDA-APS/apstools/blob/main/LICENSE.txt"
long_description = file: README.md
long_description_content_type = text/markdown
keywords = ["SPEC", "diffraction", "data acquisition", "NeXus", "HDF5", "MatPlotLib"]
author = Pete R. Jemian
author_email = jemian@anl.gov
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 6 - Mature
    Environment :: Console
    Intended Audience :: Science/Research
    License :: Freely Distributable
    License :: Public Domain
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development :: Embedded Systems
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development
    Topic :: Utilities

[options]
# python_requires = >=3.8
packages = find:
# setup_requires =
#     setuptools_scm[toml]>=6.2

# Specify any package dependencies below.  Examples shown
install_requires =
    area-detector-handlers
    bluesky>=1.6.2
    databroker==1.2.5
    databroker-pack
    h5py
    matplotlib
    mongoquery>=1.3.6
    numpy
    ophyd>=1.5.1
    openpyxl
    pint
    psutil
    pyepics>=3.4.2
    pyRestTable>=2020.0.8
    pysumreg
    spec2nexus>=2021.1.7
    xlrd
    setuptools-scm

[options.extras_require]
# For development tests/docs
dev =
    coveralls
    pytest
    pytest-cov
    setuptools-scm

# Specify any package data to be included in the wheel below.
[options.package_data]
# Include our documentation helpers: md & rst
apstools =
    *.rst
    *.md
    LICENSE.txt
    CHANGES*
    devices/*.db
    devices/*.ui
    devices/*.yml
    migration/config

[options.entry_points]
console_scripts =
    spec2ophyd = apstools.migration.spec2ophyd:main
